update card slide

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                <div class="info-menu">
                   <p>central de atendimento:</p>
                   <img src="image/icon/icon-telefone.png" width="15px"><span class="numero">(81) 3317-0212</span>
-                  <img src="image/icon/icon-email.png" width="15px"><span class="email">aaaaaaaaaaa@alpha.edu.br</span>
+                  <img src="image/icon/icon-whatsapp.png" width="15px"><span class="email">(81) 99838-0081</span>
                </div>
             </div>
          <!-- OFF INFORMAÇÕES DE AJUDA -->
