--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                      </p>
                   </div>
                      <div class="faca-mais-img">
-                        <img src="image/aluno/aluno-texto1.jpg" alt="aluno" width="320px">
+                        <img src="image/aluno/aluno-texto1.jpg" alt="aluno">
                      </div>
                </div>
             </section>
@@ -102,7 +102,7 @@
             <section class="text-2">
                <div class="container-text-2">
                      <div class="faca-mais-img-2">
-                        <img src="image/aluno/aluno-texto1.jpg" alt="aluno" width="320px">
+                        <img src="image/aluno/aluno-texto1.jpg" alt="aluno">
                      </div>
                   <div class="faca-mais-text-2">
                      <h3>O Colégio que o seu filho merece!</h3>
