--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                               <li><a href="#">regras e normas</a></li>
                               <li><a href="#">regimento</a></li>
                               <li><a href="#">nossa identidade</a></li>
+                              <li><a href="#">como se matricular?</a></li>
                               <li><a href="#">infraestrutura</a></li>
                               <li><a href="#">equipe colégio alpha</a></li>
                            </ul></li>
@@ -132,7 +133,7 @@
                      <img src="image/aluno/aluno-texto1.jpg" alt="Imagem" draggable="false">
                      <div class="content">
                         <h2>ensino infantil</h2>
-                        <p class="description"><a href="#" class="btn">Sobre mais></a></p>
+                        <p class="description"><a href="#" class="btn" id="btn-no">Sobre mais></a></p>
                      </div>
                     </li>
 
@@ -156,7 +157,7 @@
                      <img src="image/aluno/aluno-texto1.jpg" alt="Imagem" draggable="false">
                            <div class="content">
                               <h2>ensino médio</h2>
-                              <p class="description"><a href="#" class="btn">Sobre mais></a></p>
+                              <p class="description"><a href="#" class="btn" id="btn-no">Sobre mais></a></p>
                            </div>
                     </li>
 
@@ -164,7 +165,7 @@
                      <img src="image/aluno/aluno-texto1.jpg" alt="Imagem" draggable="false">
                      <div class="content">
                         <h2>extracurricular</h2>
-                        <p class="description"><a href="#" class="btn">Sobre mais></a></p>
+                        <p class="description"><a href="#" class="btn" id="btn-no">Sobre mais></a></p>
                      </div>
                     </li>
 
@@ -246,7 +247,7 @@
                <p>Siga-nos em nossas redes sociais:</p>
 
                <div id="footer-social-midia">
-                  <a href="#" class="footer-link" id="instagram"><img src="image/icon/icon-instagram.png"></a>
+                  <a href="https://www.instagram.com/alphacolegiooficial/" target="_blank" class="footer-link" id="instagram"><img src="image/icon/icon-instagram.png"></a>
                </div>
             </div>
                <ul class="footer-list">
